Ajout d'un champ dans le formulaire de création d'un jeu pour générer un nombre d'exemplaires

--- a/src/AdminBundle/Resources/views/game/show.html.twig
+++ b/src/AdminBundle/Resources/views/game/show.html.twig
@@ -36,6 +36,8 @@
         </tbody>
     </table>
 
+    <span>Nombre d'exemplaires : {{ nbcopies }}</span>
+
     <ul>
         <li>
             <a href="{{ path('admin_index') }}">Back to the list</a>
