--- a/src/AdminBundle/Resources/views/admin-layout.html.twig
+++ b/src/AdminBundle/Resources/views/admin-layout.html.twig
@@ -27,6 +27,9 @@
         <ul class="nav navmenu-nav">
             <li><a href="{{ path('admin_index') }}">Liste jeux</a></li>
             <li><a href="{{ path('admin_member_index') }}">Membres</a></li>
+            {% if is_granted('ROLE_SUPER_ADMIN') %}
+            <li><a href="{{ path('admin_user_index') }}">Administrateurs</a></li>
+            {% endif %}
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Listes statiques<b class="caret"></b></a>
                 <ul class="dropdown-menu navmenu-nav" role="menu">
@@ -38,6 +41,9 @@
                     <li><a href="{{ path('admin_paymentmethod_index') }}">Moyen de paiement</a></li>
                 </ul>
             </li>
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            <li><a href="/logout">Se déconnecter</a></li>
+            {% endif %}
         </ul>
     </nav>
     <div class="navbar navbar-default navbar-fixed-top">
