--- a/src/CommonBundle/Resources/views/Default/listGames.html.twig
+++ b/src/CommonBundle/Resources/views/Default/listGames.html.twig
@@ -1,7 +1,7 @@
 <div id="loader" class="text-center">
     <img src="{{ asset('images/loader.gif') }}" alt="#" class="game-image">
 </div>
-{% if pagination is null %}
+{% if pagination.items|length == 0 %}
     <p>
         Aucun jeu ne correspond a votre recherche
     </p>
