--- a/src/AdminBundle/Resources/views/game/edit.html.twig
+++ b/src/AdminBundle/Resources/views/game/edit.html.twig
@@ -8,7 +8,9 @@
         <img style="width:10%;" src="{{ asset('uploads/images/' ~ oldImageName) }}"/>
         {{ form_widget(edit_form.image) }}
 
+        {{ form_widget(edit_form.nbcopies, {'attr': {'disabled': 'disabled' } }) }}
         {{ form_widget(edit_form) }}
+
         <input type="submit" value="Edit" />
     {{ form_end(edit_form) }}
 
