--- a/src/CommonBundle/Resources/views/Default/listGames.html.twig
+++ b/src/CommonBundle/Resources/views/Default/listGames.html.twig
@@ -23,6 +23,8 @@
 
         </div>
     {% endfor %}
+    <div class="main-div-footer-border"></div>
+
     <div class="navigation">
         {{ knp_pagination_render(pagination) }}
     </div>
