Add bootstrap-table and design to admin games list

--- a/src/AdminBundle/Resources/views/admin-layout.html.twig
+++ b/src/AdminBundle/Resources/views/admin-layout.html.twig
@@ -11,6 +11,7 @@
         '@AdminBundle/Resources/public/css/bootstrap-table.min.css'
                        '@AdminBundle/Resources/public/css/jasny-bootstrap.min.css'
         '@AdminBundle/Resources/public/css/navmenu-push.css'
+        '@AdminBundle/Resources/public/css/admin-theme.css'
 
         %}
 
