--- a/src/AdminBundle/Resources/views/game/index.html.twig
+++ b/src/AdminBundle/Resources/views/game/index.html.twig
@@ -1,47 +1,72 @@
 {% extends "AdminBundle::admin-layout.html.twig" %}
 
 {% block content %}
-    <h1>Games list</h1>
-
-    <table class="table table-bordered table-responsive">
+    <div class="row top-table">
+        <h1 class="col-lg-4 col-sm-4">Games list</h1>
+        <div>
+            <a href="{{ path('admin_new') }}"><input type='button' class='btn btn-primary' value='Create a new game'></a>
+        </div>
+    </div>
+    <table id="table"
+           data-toggle="table"
+           data-url="{{ path("games_resp") }}"
+           data-show-columns="true"
+           data-locale="fr-FR"
+           data-pagination="true"
+           data-side-pagination="server"
+           data-page-list="[5, 10, 20, 50, 100, 200]"
+           data-page-size="5"
+           data-search="true"
+           data-show-refresh="true"
+           data-sort-order="desc"
+           data-show-toggle="true"
+           data-export-types="['excel','doc']"
+           data-show-export="true"
+           data-ajax-options="test"
+    >
         <thead>
-            <tr>
-                <th>Image</th>
-                <th>Name</th>
-                <th>Duration</th>
-                <th>Age</th>
-                <th>Rules</th>
-                <th>Releasedate</th>
-                <th>Actions</th>
-            </tr>
+        <tr>
+            <th data-field="image" data-formatter="imgFormatter" >Image</th>
+            <th data-field="name">Nom</th>
+            <th data-field="duration">Durée</th>
+            <th data-field="age">Age</th>
+            <th data-field="rules">Règles</th>
+            <th data-field="releaseDate">Date de création</th>
+            <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents">Action</th>
+        </tr>
         </thead>
-        <tbody>
-        {% for game in games %}
-            <tr>
-                <td><img style="width:30%;margin-left:35%;" src="{{ asset('uploads/images/' ~ game.image) }}"/></td>
-                <td>{{ game.name }}</td>
-                <td>{{ game.duration }}</td>
-                <td>{{ game.ageMin }} - {{ game.ageMax }}</td>
-                <td>{{ game.rules }}</td>
-                <td>{% if game.releaseDate %}{{ game.releaseDate|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('admin_show', { 'id': game.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('admin_edit', { 'id': game.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('admin_new') }}">Create a new game</a>
-        </li>
-    </ul>
+    <div class="row">
+        <div class="col-lg-2">
+            <a href="{{ path('admin_new') }}"><input type='button' class='btn btn-primary' value='Create a new game'></a>
+        </div>
+    </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+
+    <script>
+
+        function imgFormatter(value,row,index) {
+
+
+                var url = "{{ asset('uploads/images/') }}";
+
+                return [
+                    '<img src="'+url+value+'"/>'
+                ].join('');
+        }
+
+        function actionFormatter(value, row, index) {
+            var show = Routing.generate('admin_show', { id: row.id });
+            var edit = Routing.generate('admin_edit', { id: row.id });
+            return [
+                "<a href="+show+"><input type='button' class='btn btn-default' value='show'></a>",
+                "<a href="+edit+"><input type='button' class='btn btn-default' value='edit'></a>",
+            ].join('');
+        }
+    </script>
+
 {% endblock %}
