is en fr du bootstrap table et début design

--- a/src/AdminBundle/Resources/views/admin-layout.html.twig
+++ b/src/AdminBundle/Resources/views/admin-layout.html.twig
@@ -68,6 +68,7 @@
                    '@AdminBundle/Resources/public/js/jasny-bootstrap.min.js'
                    '@AdminBundle/Resources/public/js/bootstrap-table-export.js'
                    '@AdminBundle/Resources/public/js/tableExport.js'
+                   '@AdminBundle/Resources/public/js/bootstrap-table-fr-FR.min.js'
     %}
 
     <script src="{{ asset_url }}"></script>
