--- a/src/AdminBundle/Resources/views/member/edit.html.twig
+++ b/src/AdminBundle/Resources/views/member/edit.html.twig
@@ -1,21 +1,26 @@
 {% extends "AdminBundle::admin-layout.html.twig" %}
-
+{%  form_theme edit_form 'bootstrap_3_horizontal_layout.html.twig' %}
 {% block content %}
-    <h1>Member edit</h1>
+    <h1>Modification du membre</h1>
 
     {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('admin_member_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    {{ form_row(edit_form.firstName) }}
+    {{ form_row(edit_form.lastName) }}
+    {{ form_row(edit_form.email) }}
+    {{ form_row(edit_form.telNum) }}
+
+    {{ form_row(edit_form._token) }}
+        {#{{ form_widget(edit_form) }}#}
+        <input type="submit" class="btn btn-success" value="Valider" />
+    {{ form_end(edit_form, {'render_rest': false}) }}
+
+    <a href="{{ path('admin_member_index') }}"><button class="btn btn-default">Retour à la liste</button></a>
+
+
+
+    {{ form_start(delete_form, {}) }}
+        <input type="submit" class="btn btn-danger" value="Supprimer" disabled>
+    {{ form_end(delete_form) }}
+
 {% endblock %}
