--- a/src/AdminBundle/Resources/views/copy/index.html.twig
+++ b/src/AdminBundle/Resources/views/copy/index.html.twig
@@ -12,6 +12,7 @@
             </tr>
         </thead>
         <tbody>
+          {{ dump(copies) }}
         {% for copy in copies %}
             <tr>
                 <td><a href="{{ path('admin_copy_show', { 'id': copy.id }) }}">{{ copy.id }}</a></td>
