--- a/src/AdminBundle/Resources/views/member/new.html.twig
+++ b/src/AdminBundle/Resources/views/member/new.html.twig
@@ -8,5 +8,5 @@
         {{ form_widget(form) }}
         <input type="submit" class="btn btn-success pull-right" value="Create" />
     {{ form_end(form) }}
-    <a href="{{ path('admin_member_index') }}"><button class="btn btn-default">Retour à la liste</button></a>
+    <a href="{{ path('admin_member_index') }}"><button class="btn btn-default col-lg-offset-2">Retour à la liste</button></a>
 {% endblock %}
