Now you can manage a copy's location and its status as well

--- a/src/AdminBundle/Resources/views/copy/edit.html.twig
+++ b/src/AdminBundle/Resources/views/copy/edit.html.twig
@@ -10,7 +10,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('admin_copy_index') }}">Back to the list</a>
+            <a href="{{ path('admin_show', {'id': copy.game.id}) }}">Retour à la liste des exemplaires</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
