--- a/src/AdminBundle/Resources/views/game/show.html.twig
+++ b/src/AdminBundle/Resources/views/game/show.html.twig
@@ -44,6 +44,7 @@
             <th>Référence</th>
             <th>Etat</th>
             <th>Emplacement</th>
+            <th>Gérer</th>
         </tr>
       </thead>
       <tbody>
@@ -51,8 +52,20 @@
 
       <tr>
         <td><a href="{{path('admin_copy_show', {'id': copy.id }) }}"> {{ copy.reference }}</a></td>
-        <td>{{copy.status}}</td>
-        <td>{{copy.localisation}}</td>
+        <td>
+        {% if copy.status == null %}
+          null
+        {% else %}
+          {{copy.status.name}}
+        {% endif %}
+        </td>
+        <td>
+        {% if copy.localisation == null %}
+          null
+        {% else %}
+          {{copy.localisation.name}}
+        {% endif %}</td>
+        <td><a href="{{path('admin_copy_edit', {'id': copy.id }) }}"><button type="button" class="btn btn-default">Editer</button></a></td>
       </tr>
 
       {% endfor %}
