Fixing the game duration display

--- a/src/AdminBundle/Resources/views/game/show.html.twig
+++ b/src/AdminBundle/Resources/views/game/show.html.twig
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <th>Duration</th>
-                <td>{{ game.duration }}</td>
+                <td>{{ duration }}</td>
             </tr>
             <tr>
                 <th>Age</th>
