Preparing the borrowing manager

--- a/src/AdminBundle/Resources/views/borrow/index.html.twig
+++ b/src/AdminBundle/Resources/views/borrow/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Emprunts en cours</h1>
 
-    {% if borrows == null %}
+    {% if currentBorrowings == null %}
     <div>Aucun emprunt en cours.</div>
 
     {% else %}
