ajout partie show du mail clic

--- a/src/AdminBundle/Resources/views/member/show.html.twig
+++ b/src/AdminBundle/Resources/views/member/show.html.twig
@@ -43,7 +43,7 @@
             </tr>
             <tr>
                 <th class="col-lg-2">Email: </th>
-                <td>{{ member.email }}</td>
+                <td><a href="mailto:{{ member.email }}" >{{ member.email }}</a></td>
             </tr>
             <tr>
                 <th class="col-lg-2">Numéro Tel: </th>
