--- a/src/AdminBundle/Resources/views/game/index.html.twig
+++ b/src/AdminBundle/Resources/views/game/index.html.twig
@@ -2,9 +2,9 @@
 
 {% block content %}
     <div class="row top-table">
-        <h1 class="col-lg-4 col-sm-4">Games list</h1>
+        <h1 class="col-lg-4 col-sm-4">Liste des jeux</h1>
         <div>
-            <a href="{{ path('admin_new') }}"><input type='button' class='btn btn-primary' value='Create a new game'></a>
+            <a href="{{ path('admin_new') }}"><input type='button' class='btn btn-primary' value='Créer un nouveau jeu'></a>
         </div>
     </div>
     <table id="table"
@@ -31,7 +31,7 @@
             <th data-field="duration">Durée</th>
             <th data-field="age">Age</th>
             <th data-field="rules">Règles</th>
-            <th data-field="releaseDate">Date de création</th>
+            <th data-field="releaseDate">Date de sortie</th>
             <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents">Action</th>
         </tr>
         </thead>
@@ -39,7 +39,7 @@
 
     <div class="row">
         <div class="col-lg-2">
-            <a href="{{ path('admin_new') }}"><input type='button' class='btn btn-primary' value='Create a new game'></a>
+            <a href="{{ path('admin_new') }}"><input type='button' class='btn btn-primary' value='Créer un nouveau jeu'></a>
         </div>
     </div>
 {% endblock %}
@@ -63,8 +63,8 @@
             var show = Routing.generate('admin_show', { id: row.id });
             var edit = Routing.generate('admin_edit', { id: row.id });
             return [
-                "<a href="+show+"><input type='button' class='btn btn-default' value='show'></a>",
-                "<a href="+edit+"><input type='button' class='btn btn-default' value='edit'></a>",
+                "<a href="+show+"><input type='button' class='btn btn-default' value='Afficher'></a>",
+                "<a href="+edit+"><input type='button' class='btn btn-default' value='Modifier'></a>",
             ].join('');
         }
     </script>
