Editing the copy show

--- a/src/AdminBundle/Resources/views/copy/show.html.twig
+++ b/src/AdminBundle/Resources/views/copy/show.html.twig
@@ -1,7 +1,7 @@
 {% extends "AdminBundle::admin-layout.html.twig" %}
 
 {% block content %}
-    <h1>Copy</h1>
+    <h1>Exemplaire du jeu {{ copy.game.name }}</h1>
 
     <table>
         <tbody>
