Adding links for players, country and congestion

--- a/src/AdminBundle/Resources/views/admin-layout.html.twig
+++ b/src/AdminBundle/Resources/views/admin-layout.html.twig
@@ -38,6 +38,9 @@
                     <li><a href="{{ path('admin_theme_index') }}">Theme</a></li>
                     <li><a href="{{ path('admin_type_index') }}">Type</a></li>
                     <li><a href="{{ path('admin_publisher_index') }}">Éditeur</a></li>
+                    <li><a href="{{ path('admin_author_index') }}">Auteur</a></li>
+                    <li><a href="{{ path('admin_country_index') }}">Pays</a></li>
+                    <li><a href="{{ path('admin_players_index') }}">Nombre de joueurs</a></li>
                     <li><a href="{{ path('admin_status_index') }}">Statut jeu</a></li>
                     <li><a href="{{ path('admin_localisation_index') }}">Emplacement</a></li>
                     <li><a href="{{ path('admin_paymentmethod_index') }}">Moyen de paiement</a></li>
