fixes on new entities

--- a/src/AdminBundle/Resources/views/author/index.html.twig
+++ b/src/AdminBundle/Resources/views/author/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AdminBundle::admin-layout.html.twig' %}
 
-{% block body %}
+{% block content %}
     <h1>Authors list</h1>
 
     <table>
