--- a/src/AdminBundle/Resources/views/congestion/edit.html.twig
+++ b/src/AdminBundle/Resources/views/congestion/edit.html.twig
@@ -1,6 +1,6 @@
-{% extends 'AdminBundle::admin-layout.html.twig' %}
+{% extends "AdminBundle::admin-layout.html.twig" %}
 
-{% block body %}
+{% block content %}
     <h1>Congestion edit</h1>
 
     {{ form_start(edit_form) }}
