--- a/src/AdminBundle/Resources/views/congestion/show.html.twig
+++ b/src/AdminBundle/Resources/views/congestion/show.html.twig
@@ -1,6 +1,6 @@
-{% extends 'AdminBundle::admin-layout.html.twig' %}
+{% extends "AdminBundle::admin-layout.html.twig" %}
 
-{% block body %}
+{% block content %}
     <h1>Congestion</h1>
 
     <table>
