--- a/src/AdminBundle/Resources/views/country/edit.html.twig
+++ b/src/AdminBundle/Resources/views/country/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AdminBundle::admin-layout.html.twig' %}
 
-{% block body %}
+{% block content %}
     <h1>Country edit</h1>
 
     {{ form_start(edit_form) }}
