--- a/src/AdminBundle/Resources/views/country/show.html.twig
+++ b/src/AdminBundle/Resources/views/country/show.html.twig
@@ -1,7 +1,7 @@
-{% extends 'AdminBundle::admin-layout.html.twig' %}
+{% extends "AdminBundle::admin-layout.html.twig" %}
 
-{% block body %}
-    <h1>Country</h1>
+{% block content %}
+    <h1>country</h1>
 
     <table>
         <tbody>
@@ -19,6 +19,14 @@
     <ul>
         <li>
             <a href="{{ path('admin_country_index') }}">Back to the list</a>
+        </li>
+        <li>
+            <a href="{{ path('admin_country_edit', { 'id': country.id }) }}">Edit</a>
+        </li>
+        <li>
+            {{ form_start(delete_form) }}
+                <input type="submit" value="Delete">
+            {{ form_end(delete_form) }}
         </li>
     </ul>
 {% endblock %}
