--- a/src/AdminBundle/Resources/views/borrow/index.html.twig
+++ b/src/AdminBundle/Resources/views/borrow/index.html.twig
@@ -1,18 +1,70 @@
 {% extends "AdminBundle::admin-layout.html.twig" %}
 
 {% block content %}
-    <h1>Emprunts en cours</h1>
+    <div class="row top-table">
+        <h1 class="col-lg-4 col-sm-4">Emprunts en cours</h1>
+        <div>
+            <a href="{{ path('admin_borrow_new') }}"><input type='button' class='btn btn-primary' value='Déclarer un nouvel emprunt'></a>
+        </div>
+    </div>
+    <table id="table"
+           data-toggle="table"
+           data-url="{{ path("borrows_resp") }}"
+           data-show-columns="true"
+           data-locale="fr-FR"
+           data-pagination="true"
+           data-side-pagination="server"
+           data-page-list="[5, 10, 20, 50, 100, 200]"
+           data-page-size="5"
+           data-search="true"
+           data-show-refresh="true"
+           data-sort-order="desc"
+           data-show-toggle="true"
+           data-export-types="['excel','doc']"
+           data-show-export="true"
+           data-ajax-options="test"
+    >
+        <thead>
+        <tr>
+            <th data-field="game">Jeu</th>
+            <th data-field="reference">Référence</th>
+            <th data-field="borrower" data-formatter="borrowerFormatter">Emprunté par</th>
+            <th data-field="borrowdate">Date d'emprunt</th>
+            <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents">Action</th>
+        </tr>
+        </thead>
+    </table>
 
-    {% if borrowings == null %}
-    <div>Aucun emprunt en cours.</div>
+    <div class="row">
+        <div class="col-lg-2">
+            <a href="{{ path('admin_borrow_new') }}"><input type='button' class='btn btn-primary' value='Déclarer un nouvel emprunt'></a>
+        </div>
+    </div>
+{% endblock %}
 
-    {% else %}
-      {% for borrowing in borrowings %}
-      <li>
-          {{ borrowing.copy.game.name }} (référence {{ borrowing.copy.reference }}) : emprunté par <a href="{{ path('admin_borrow_show', { 'id': borrowing.id }) }}">{{ borrowing.member.firstName }} {{borrowing.member.lastName}}</a> le {{borrowing.beginDate|date("m/d/Y", "Europe/Paris")}} <a href="{{ path('admin_borrow_edit', { 'id': borrowing.id }) }}">[Modifier]</a>
-      </li>
-      {% endfor %}
-    {% endif %}
+{% block javascripts %}
+    {{ parent() }}
 
-    <p><a href="{{ path('admin_borrow_new') }}">Déclarer un nouvel emprunt</a></p>
+    <script>
+        function borrowerFormatter(value,row,index) {
+                console.log(value[0]);
+
+                var path = "{{ path('admin_member_show', { id: "PLACEHOLDER" }) }}";
+                path = path.replace("PLACEHOLDER", value[0]);
+
+                return [
+                    '<a href="'+path+'">'+value[1] + ' ' + value[2] + '</a>'
+                ].join('');
+        }
+
+        function actionFormatter(value, row, index) {
+            var show = Routing.generate('admin_borrow_show', { id: row.id });
+            var edit = Routing.generate('admin_borrow_edit', { id: row.id });
+            return [
+                "<a href="+show+"><input type='button' class='btn btn-default' value='Afficher'></a>",
+                "<a href="+edit+"><input type='button' class='btn btn-default' value='Modifier'></a>",
+            ].join('');
+        }
+    </script>
+
 {% endblock %}
