--- a/src/CommonBundle/Resources/views/Default/displayGames.html.twig
+++ b/src/CommonBundle/Resources/views/Default/displayGames.html.twig
@@ -16,33 +16,64 @@
             {{ form_start(searchForm, {'attr': {'class': 'form-inline form-game-search'} }) }}
             {{ form_widget(searchForm) }}
             {{ form_end(searchForm) }}
+
             {{ form_start(sortForm)  }}
             {{ form_widget(sortForm.reinitialiser_les_filtres) }}
 
-            {{ form_widget(sortForm.trier_par) }}
-            {{ form_widget(sortForm.duree) }}
-            {{ form_widget(sortForm.age_min) }}
-            {{ form_widget(sortForm.age_max) }}
+            {{ form_widget(sortForm.trier_par, {'attr':{'class':'form-group'}}) }}
+            {{ form_widget(sortForm.duree, {'attr':{'class':'form-group','label':'Durée du jeu'}}) }}
+            {{ form_widget(sortForm.age_min, {'attr':{'class':'form-group', 'label':'Âge'}}) }}
 
-              <div class="dropdown">
+              <div class="dropdown form-group">
                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-categories" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                   Type de jeu <span class="caret"></span>
                 </button>
-              {{ form_widget(sortForm.categorie, {'attr':{'aria-labelledby':'dropdown-categories','class':'dropdown-menu'}}) }}
+              {{ form_widget(sortForm.categorie, {'attr':{'aria-labelledby':'dropdown-categories','class':'dropdown-menu '}}) }}
             </div>
-            <div class="dropdown">
+
+            <div class="dropdown form-group">
                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-editeurs" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                   Editeurs <span class="caret"></span>
                 </button>
                 {{ form_widget(sortForm.editeur, {'attr':{'aria-labelledby':'dropdown-editeurs','class':'dropdown-menu'}}) }}
             </div>
 
-<div class="dropdown">
-    <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-themes" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-Thèmes
-<span class="caret"></span>
-  </button>            {{ form_widget(sortForm.themes, {'attr':{'aria-labelledby':'dropdown-themes','class':'dropdown-menu'}}) }}
-</div>
+            <div class="dropdown form-group">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-editeurs" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  Auteurs <span class="caret"></span>
+                </button>
+                {{ form_widget(sortForm.authors, {'attr':{'aria-labelledby':'dropdown-editeurs','class':'dropdown-menu'}}) }}
+            </div>
+
+            <div class="dropdown form-group ">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-themes" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            Thèmes <span class="caret"></span>
+              </button>
+              {{ form_widget(sortForm.themes, {'attr':{'aria-labelledby':'dropdown-themes','class':'dropdown-menu'}}) }}
+            </div>
+
+            <div class="dropdown form-group ">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-themes" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            Origine du jeu <span class="caret"></span>
+              </button>
+              {{ form_widget(sortForm.country, {'attr':{'aria-labelledby':'dropdown-themes','class':'dropdown-menu'}}) }}
+            </div>
+
+            <div class="dropdown form-group ">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-themes" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            Nombre de joueurs <span class="caret"></span>
+              </button>
+              {{ form_widget(sortForm.players, {'attr':{'aria-labelledby':'dropdown-themes','class':'dropdown-menu'}}) }}
+            </div>
+
+            <div class="dropdown form-group ">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-themes" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            Encombrement du jeu  <span class="caret"></span>
+              </button>
+              {{ form_widget(sortForm.congestion, {'attr':{'aria-labelledby':'dropdown-themes','class':'dropdown-menu'}}) }}
+            </div>
+
+
             {{ form_end(sortForm) }}
           </div>
 
