--- a/src/CommonBundle/Resources/views/Default/singleGame.html.twig
+++ b/src/CommonBundle/Resources/views/Default/singleGame.html.twig
@@ -10,7 +10,7 @@
     <div id="single-game-text">
       <p>Règles : {{ game.rules }}</p>
       <p>Date de sortie : {{ game.releaseDate | date("d/m/Y") }}</p>
-      <p>De {{ game.ageMin }} à {{ game.ageMax }} ans</p>
+      <p> À partir de {{ game.ageMin }} ans</p>
     </div>
   </div>
 
