--- a/src/AdminBundle/Resources/views/membership/show.html.twig
+++ b/src/AdminBundle/Resources/views/membership/show.html.twig
@@ -1,36 +1,35 @@
 {% extends "AdminBundle::admin-layout.html.twig" %}
 
 {% block content %}
-    <h1>Membership</h1>
+    <div class="row top">
+        <h1>Adhésion</h1>
+    </div>
+    <div class="row col-sm-offset-3 col-sm-6 col-lg-offset-3 col-lg-6 show">
+        <table class="table table-responsive table-striped">
+            <tr>
+                <th>Membre</th>
+                <td>{{ membership.member.firstname }} {{ membership.member.lastname }}</td>
+            </tr>
+            <tr>
+                <th>Date de début</th>
+                <td>{{ membership.beginDate|date('Y-m-d') }}</td>
+            </tr>
+            <tr>
+                <th>Montant</th>
+                <td>{{ membership.amount }}€</td>
+            </tr>
+            <tr>
+                <th>Moyen de paiement</th>
+                <td>{{ membership.paymentMethod.name }}</td>
+            </tr>
+        </table>
+    </div>
 
-    <table>
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ membership.id }}</td>
-            </tr>
-            <tr>
-                <th>Amount</th>
-                <td>{{ membership.amount }}</td>
-            </tr>
-            <tr>
-                <th>Begindate</th>
-                <td>{% if membership.beginDate %}{{ membership.beginDate|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('admin_membership_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('admin_membership_edit', { 'id': membership.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    <div class="row col-sm-offset-3 col-sm-6 col-lg-offset-3 col-lg-6 show">
+        <a href="{{ path('admin_membership_index') }}"><button type="button" class="btn btn-primary">Retour à la liste</button></a>
+        <a href="{{ path('admin_membership_edit', { 'id': membership.id }) }}"><button type="button" class="btn btn-success">Modifier</button></a>
+        {{ form_start(delete_form) }}
+            <input type="submit" class="btn btn-danger" value="Supprimer">
+        {{ form_end(delete_form) }}
+    </div>
 {% endblock %}
