--- a/src/AdminBundle/Resources/views/localisation/show.html.twig
+++ b/src/AdminBundle/Resources/views/localisation/show.html.twig
@@ -1,40 +1,31 @@
 {% extends "AdminBundle::admin-layout.html.twig" %}
 
 {% block content %}
-    <h1>Localisation</h1>
-
-    <table>
-        <tbody>
+    <div class="row top">
+        <h1>Emplacement</h1>
+    </div>
+    <div class="row col-sm-offset-3 col-sm-6 col-lg-offset-3 col-lg-6 show">
+        <table class="table table-responsive table-striped">
             <tr>
-                <th>Id</th>
-                <td>{{ localisation.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
+                <th>Nom</th>
                 <td>{{ localisation.name }}</td>
             </tr>
             <tr>
-                <th>Adress</th>
-                <td>{{ localisation.adress }}</td>
+                <th>Adresse</th>
+                <td>{{ localisation.adress}}</td>
             </tr>
             <tr>
-                <th>Telnum</th>
+                <th>Téléphone</th>
                 <td>{{ localisation.telNum }}</td>
             </tr>
-        </tbody>
-    </table>
+        </table>
+    </div>
 
-    <ul>
-        <li>
-            <a href="{{ path('admin_localisation_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('admin_localisation_edit', { 'id': localisation.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    <div class="row col-sm-offset-3 col-sm-6 col-lg-offset-3 col-lg-6 show">
+        <a href="{{ path('admin_localisation_index') }}"><button type="button" class="btn btn-primary">Retour à la liste</button></a>
+        <a href="{{ path('admin_localisation_edit', { 'id': localisation.id }) }}"><button type="button" class="btn btn-success">Modifier</button></a>
+        {{ form_start(delete_form) }}
+            <input type="submit" class="btn btn-danger" value="Supprimer">
+        {{ form_end(delete_form) }}
+    </div>
 {% endblock %}
