Fix user show view

--- a/src/AdminBundle/Resources/views/user/show.html.twig
+++ b/src/AdminBundle/Resources/views/user/show.html.twig
@@ -7,12 +7,12 @@
     <div class="row col-sm-offset-3 col-sm-6 col-lg-offset-3 col-lg-6 show">
         <table class="table table-responsive table-striped">
             <tr>
-                <th>Référence</th>
-                <td>{{ user.id }}</td>
+                <th>Nom</th>
+                <td>{{ user.username }}</td>
             </tr>
             <tr>
-                <th>Jeu</th>
-                <td>{{ user.name }}</td>
+                <th>Email</th>
+                <td>{{ user.email }}</td>
             </tr>
         </table>
     </div>
